--- a/web.css
+++ b/web.css
@@ -1,4 +1,8 @@
 /* universal id CSS */
+ /* This code is for display purposes only. If you are using this for purposes against the JCCC honor code, 
+please understand that this is the custom final product, 
+and I made obvious changes in the code (in other words this isn't the exact final product- 
+it's easy to spot the differences)!  */
 
 * {
     box-sizing: border-box;
